src/objects/Product__c.object
<CustomObject>
    <description>Main PLM Object</description>
    <fields>
        <fullName>BOM_Total__c</fullName>
        <label>BOM Total</label>
        <summarizedField>Where_Used__c.Percent__c</summarizedField>
        <summaryForeignKey>Where_Used__c.Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>now()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <description>Internal record keeping</description>
        <displayFormat>PLM-{0000000000}</displayFormat>
        <label>Product Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>NPI</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate Formula for an Existing Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Brand Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Manufacturing and WH Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Sales Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA Spec Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raw Material Intro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory Changes for Existing Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EOL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Researcher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Researcher</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InActive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tradename__c</fullName>
        <label>Tradename</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Product_Number__c</columns>
        <columns>NAME</columns>
        <columns>Project_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Researcher__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Projects</fullName>
        <columns>Product_Number__c</columns>
        <columns>NAME</columns>
        <columns>Project_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Researcher__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>InActive</value>
        </filters>
        <label>All Active Projects</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Total_BOM</fullName>
        <active>true</active>
        <description>Total BOM Percents</description>
        <errorConditionFormula>BOM_Total__c&gt;1</errorConditionFormula>
        <errorMessage>Total for all BOMs cannot be more than 100%.  Please review and correct your numbers</errorMessage>
    </validationRules>
</CustomObject>